<resources>
    <string name="app_name">University Study</string>

    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--BOTTOM BAR-->
    <string name="Inicio">Inicio</string>
    <string name="Promedio">Promediar</string>
    <string name="Reconocer">Reconocer</string>
    <string name="Salir">Salir</string>

    <!--REGISTRO-->
    <string name="CrearCuentaTXT">Crear una Cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo Electronico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una Cuenta</string>

    <!--LOGIN-->
    <string name="IniciarSesionTXT">Iniciar Sesión</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevoTXT">¿No tienes cuenta?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment">Estoy en el Inicio</string>
    <string name="fragment2">Estoy en Promediar</string>
    <string name="fragment3">Estoy en Reconocer</string>
    <string name="fragment4">Estoy en Salir </string>

    <string name="BtnIngresar">Ingresar al Lector de Texto</string>

    <!--RECONOCER TEXTO-->
    <string name="ReconocerTexto">Reconocer Texto</string>
    <string name="ReconocerTXT">Texto Reconocido:</string>
    <string name="TextoReconocidoEt"> -- </string>
    
    <string name="Menu_abrir_galeria">Abrir galeria</string>
    <string name="Menu_abrir_camara">Abrir camara</string>


</resources>